src/objects/Survey_Metrics__c.object
<CustomObject>
    <fields>
        <fullName>Metrics__c</fullName>
        <label>Metrics</label>
        <referenceTo>Metrics__c</referenceTo>
        <relationshipLabel>Survey Metrics</relationshipLabel>
        <relationshipName>Survey_Metrics</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Weight__c</fullName>
        <label>Question Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Template__c</fullName>
        <label>Survey Template</label>
        <referenceTo>Survey_Template__c</referenceTo>
        <relationshipLabel>Survey Metrics</relationshipLabel>
        <relationshipName>Survey_Metrics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Metrics</label>
    <nameField>
        <displayFormat>SM-{0000000000}</displayFormat>
        <label>Survey Metrics Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>